--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -25,6 +25,7 @@ en:
       assessments: 'Assessments'
     admin:
       action: 'Administrator Actions'
+      dashboard: "Dashboard"
       competency: 'Competency Managememt'
       course: 'Course Managememt'
       teacher: 'Teacher Managememt'
