Implement competency view for user. Update position view to display related course.

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -3,6 +3,8 @@ en:
     navigator: 'Navigator'
     user:
       action: 'User Actions'
+      home: 'My Home'
+      myprofile: 'My Profile'
       mycourse: 'My Courses'
       myexams: 'My Exams'
       myassessments: 'My Assessments'
