--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -3,7 +3,12 @@ zh-CN:
   menu:
     navigator: '导航栏'
     user:
+      home_title: "主页"
+      notice_title: "温馨提示:"
+      announcements: "公告"
       actions: '用户操作'
+      home: "我的主页"
+      myprofile: "个人简介"
       mycourse: '我的课程'
       myexams:  '我的考试'
       myassessments: '个人评估'
