Update the layout for show course.

--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -186,7 +186,7 @@ zh-CN:
       position: "职位:"
       filter_condition: "过滤课程"
       clear_filter: "清除过滤"
-      clik_watch: "点击播放"
+      clik_watch: "点击播放课件"
       tip: "提示"
       tips: "提示"
       notic1: "目前没有课程资料"
