fix view action zh-CN

--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -6,7 +6,7 @@ zh-CN:
       home_title: "主页"
       notice_title: "温馨提示:"
       announcements: "公告"
-      actions: '用户操作'
+      action: '学员选项'
       home: "我的主页"
       myprofile: "个人资料"
       mycourse: '我的课程'
