fix search zh-CN

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -193,6 +193,7 @@ en:
       tips: "Tips"
       notic1: "No course material yet"
       notic2: "No discusstion yet"
+      notic3: "To search course and hit enter...."
   share:
     header:
       edit: "Edit Profile"
