--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -222,11 +222,29 @@ zh-CN:
       title: "权限中心"
       sub_title: "查看权限"
       action: "修改"
+      role: "角色"
       name: "模块"
-      create: "可创建"
-      read: "可读取"
-      update: "可修改"
+      create: "创建权"
+      read: "查阅权"
+      update: "修改权"
       delete: "可删除"
+      filter: "筛选"
+      filter_condition_model: "筛选模块"
+      filter_condition_role: "筛选角色"
+      search: "查询"
+    model:
+      user: "个人信息模块"
+      permission: "权限管理模块"
+      ability: "能力管理模块"
+      teacher: "讲师管理模块"
+      course: "课程管理模块"
+      plan: "培训管理模块"
+      knowledge: "知识管理模块" 
+    role:
+      admin: "管理员"
+      manager: "部门经理"
+      teacher: "讲师"
+      staff: "普通员工"   
   share:
     header:
       edit: "修改资料"
