add export Csv Sample

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -108,6 +108,7 @@ en:
       edit: 'Edit'
       create: 'Create New User'
       export: 'Export As Csv'
+      export_sample: 'Export Sample Csv'
       import: 'Import User'
       select: 'Select file'
       manage: 'Manage Users'
@@ -138,6 +139,7 @@ en:
       edit: 'Edit'
       create: 'Create New Position'
       export: 'Export As Csv'
+      export_sample: 'Export Sample Csv'
       import: 'Import Position'
       select: 'Select file'
       manage: 'Manage Position'
@@ -156,6 +158,7 @@ en:
       requiremnet: 'Competency Requirements for '
       new: 'Create New Competency'
       export: 'Export As Csv'
+      export_sample: 'Export Sample Csv'
       import_title: 'Import Competency Model'
       import: 'Import Competency'
       select: 'Select file'
@@ -188,6 +191,7 @@ en:
       discussion: "Discussion"
       new: 'Create New Course'
       export: 'Export As Csv'
+      export_sample: 'Export Sample Csv'
       import_title: 'Import Course'
       import: 'Import Course'
       select: 'Select file'
